# F1-Prediction

./: .gitignore  .replit  AnalyseData.py  F1Predict.py  Improvments.txt  Open-F1-Predict-Documentation.bat  Prediction.py  Project-Presentation.pptx  Project-Report.docx  README.md  Start-F1-Predict.bat  ToDo.txt  appInstaller.bat  classification.py  main.py  pyproject.toml  regression.py  replit.nix  requirements.txt
DB/: AnalyseData.py  Database.py  DatabaseUpdate.py  DriverTable.db  F1_DB.db  Scrapper.py  dataCollection.py  dataPreperation.py
DB/ScrapperScripts/: APIScrapper.py  SeleniumScrapper.py
DB/dataCollection/: constructorStandings.py  driverStandings.py  qualifying.py  races.py  results.py  weather.py
DBOld/: DatabaseUpdate.py  Scrapper.py
DBOld/ScrapperScripts/: APIScrapper.py  HelperScrapper.py
DataAnalysisResults/: DUMMYTEST.py  main.py  predictionComparison.csv
Database/: Database.py  DriverTable.db  Scrapper.py
Docs/: .buildinfo  config.html  contact.html  develop.html  future.html  genindex.html  installing.html  objects.inv  releaseNotes.html  search.html  troubleshoot.html  upgrade.html  usage.html
ML/: model.py  predict.py  preparation.py  training.csv
Pages/: ConstructorMenu.py  ConstructorPredict.py  DriverMenu.py  DriverPredict.py  MainMenu.py  PairingMenu.py  PairingPredict.py  Settings.py
docs/: CNAME
doctrees/: adminProduct.doctree  config.doctree  contact.doctree  develop.doctree  environment.pickle  gettingStarted.doctree  integration.doctree  overview.doctree  planning.doctree  testing.doctree  upgrade.doctree
(+13 files in other folders)
