[tool.poetry]
name = "repl_nix_F1-Prediction"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
bs4 = "^0.0.1"
selenium = "^4.4.3"
webdriver-manager = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
